--- a/style.css
+++ b/style.css
@@ -18,15 +18,25 @@ header {
   display: flex;
   margin-bottom: 20px;
 }
+
 header div {
   justify-content: space-between;
   align-items: center;
 }
+
+h1,\n
+p,\n
+.connect,\n
+span {
+  font-family: "Poppins", sans-serif;
+}
+
 header span {
   color: var(--navbar);
   font-weight: 700;
   font-size: 18px;
 }
+
 section {
   display: flex;
   flex-flow: column wrap;
@@ -34,12 +44,7 @@ section {
   background-position: top;
   background-repeat: no-repeat;
 }
-h1,
-p,
-.connect,
-span {
-  font-family: "Poppins", sans-serif;
-}
+
 h1 {
   width: 70%;
   margin: 40px auto 10px;
@@ -47,12 +52,14 @@ h1 {
   font-size: 40px;
   color: var(--h1);
 }
+
 p {
   text-align: justify;
   width: 70%;
   margin: 10px auto;
   color: var(--paragraph);
 }
+
 .connect {
   text-transform: capitalize;
   width: 70%;
@@ -65,6 +72,7 @@ div {
   width: 70%;
   margin: 10px auto;
 }
+
 div img {
   margin-right: 10px;
   cursor: pointer;
