--- a/style.css
+++ b/style.css
@@ -86,6 +86,14 @@ nav {
   margin-bottom: 12px;
 }
 
+.primary-text-change {
+  margin-top: 114px;
+}
+
+.primary-margin-change {
+  text-align: left;
+}
+
 .social-media {
   display: flex;
   flex-direction: column;
@@ -94,8 +102,7 @@ nav {
 }
 
 .socials,
-.languages
- {
+.languages {
   display: flex;
   list-style: none;
 }
@@ -170,6 +177,7 @@ nav {
   color: var(--span);
   margin-left: 12px;
 }
+
 .work-subtext .dot {
   height: 10px;
   width: 10px;
@@ -192,7 +200,8 @@ nav {
   margin-bottom: 60px;
 }
 
-.project-btn a, .resume-btn a {
+.project-btn a,
+.resume-btn a {
   font-size: 17px;
   font-weight: 500;
   color: var(--logo);
@@ -201,7 +210,8 @@ nav {
   padding: 10px;
 }
 
-.project-btn:hover a, .resume-btn:hover a{
+.project-btn:hover a,
+.resume-btn:hover a {
   color: var(--paragraph);
   border-color: var(--paragraph);
 }
@@ -222,19 +232,30 @@ nav {
   margin: 0 24px;
 }
 
-.outer-list, .inner-list {
+.outer-list, 
+.inner-list {
   display: flex;
   flex-direction: column;
   list-style: none;
 }
 
-.outer-list > li{
+.outer-list > li {
   font-size: 20px;
   font-weight: 500;
   color: var(--black);
   padding: 18px;
   border-bottom: 1px solid var(--border);
 }
+
+.inner-list li {
+  background: var(--background);
+  margin-bottom: 12px;
+  padding: 12px;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+}
+
 .outer-list > li:first-child {
   border-bottom: none;
 }
@@ -247,15 +268,6 @@ nav {
   font-size: 15px;
   font-weight: 500;
   color: var(--list);
-}
-
-.inner-list li {
-  background: var(--background);
-  margin-bottom: 12px;
-  padding: 12px;
-  border-radius: 8px;
-  display: flex;
-  align-items: center;
 }
 
 .inner-list li:first-child {
