--- a/style.css
+++ b/style.css
@@ -18,10 +18,12 @@
   --span: #7a869a;
   --dot: #c1c7d0;
   --border: #dfe1e6;
+  --border2: #cfd8dc;
   --language: #ebebff;
   --black: #000;
   --list: #253858;
   --arrow: #acb7c3;
+  --textarea: #b3bac5;
 }
 
 a {
@@ -101,7 +103,7 @@ nav {
   margin-bottom: 110px;
 }
 
-.socials
+.socials,
 .languages {
   display: flex;
   list-style: none;
@@ -121,9 +123,6 @@ nav {
   font-size: 12px;
   font-weight: 500;
   color: var(--logo);
-  float: left;
-  list-style: none;
- 
 }
 
 .connect {
@@ -265,6 +264,10 @@ nav {
   list-style: none;
 }
 
+.outer-list {
+  margin-bottom: 114px;
+}
+
 .outer-list > li {
   font-size: 20px;
   font-weight: 500;
@@ -284,10 +287,6 @@ nav {
 
 .outer-list > li:first-child {
   border-bottom: none;
-}
-
-.outer-list > li:last-child {
-  margin-bottom: 40px;
 }
 
 .inner-list {
@@ -320,6 +319,18 @@ nav {
 .down {
   transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
+}
+
+.contact-form {
+  width: 375px;
+  background-color: var(--navbar);
+  background-image: url(images/footer.svg);
+  background-repeat: no-repeat;
+  background-position: right;
+  border-top-left-radius: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 @media only screen and (min-width: 375px) {
