--- a/style.css
+++ b/style.css
@@ -370,6 +370,40 @@ nav {
   border-radius: 8px;
 }
 
+.contact-list-item textarea {
+  color: var(--h1);
+  font-size: 15px;
+  font-weight: 400;
+  padding: 15px 38px 15px 16px;
+  height: 170px;
+  width: 327px;
+  border: 1px solid var(--border2);
+  border-radius: 8px;
+}
+
+.contact-list-item button:enabled {
+  color: var(--navbar);
+  padding: 12px 16px;
+  background-color: var(--white);
+  border: none;
+  border-radius: 8px;
+  width: 140px;
+  margin-bottom: 45px;
+  cursor: pointer;
+}
+
+.contact-list-item button:hover {
+  color: var(--white);
+  border-color: var(--black);
+  background-color: var(--black);
+}
+
+.contact-list-item button:active {
+  color: var(--white);
+  background-color: var(--h1);
+  border-color: var(--h1);
+}
+
 @media only screen and (min-width: 375px) {
   body {
     width: 1600px;
