--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ a {
 
 body {
   font-family: 'Poppins', sans-serif;
-  max-width: 375px;
+  width: 375px;
   margin: auto;
   background-color: var(--background);
 }
@@ -49,6 +49,14 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.hambuger {
+  display: flex;
+}
+
+.menu-items {
+  display: none;
 }
 
 .about-section {
@@ -154,6 +162,10 @@ nav {
   margin: 16px 16px 12px;
 }
 
+.work-image-large {
+  display: none;
+}
+
 .work-details {
   display: flex;
   flex-direction: column;
@@ -162,6 +174,7 @@ nav {
 }
 
 .work-details h2 {
+  width: 70%;
   font-size: 32px;
   font-weight: 700;
   color: var(--h1);
@@ -405,9 +418,184 @@ nav {
   border-color: var(--h1);
 }
 
-@media only screen and (min-width: 375px) {
+@media only screen and (min-width: 768px) {
+
   body {
-    width: 1600px;
-    margin: auto;
+    width: 100%;
+    overflow-x: hidden;
+  }
+
+  header {
+    width: 100%;
+  }
+
+  header nav {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    margin: 0 auto;
+  } 
+
+  header nav .hamburger {
+    display: none;
+  }
+
+  .menu-items {
+    display: flex;
+    list-style: none;
+  }
+  
+  .menu-items li {
+    margin-right: 32px;
+  }
+  
+  .menu-items li a {
+    text-decoration: none;
+    color: var(--paragraph);
+    font-size: 15px;
+    font-weight: 500;
+  }
+
+  .about-section,
+  .works-section,
+  .contact-section,
+  .contact-form {
+    width: 100%;
+  }
+
+  .about-section {
+    margin-top: 47px;
+    background-image: url(images/bg-desktop1.svg);
+    align-items: center;
+  }
+
+  .about-section .social-media {
+    margin-bottom: 430px;
+  }
+
+  .primary-text,
+  .social-media {
+    width: 920px;
+  }
+
+  .works-section {
+    margin-top: 142px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .work-card,
+  .work-reverse {
+    width: 1156px;
+    align-items: center;
+    justify-content: space-around;
+    height: 496px;
+  }
+
+  .work-card {
+    flex-direction: row;
+  }
+
+  .work-reverse {
+    flex-direction: row-reverse;
+  }
+
+  .work-image {
+    display: none;
+  }
+
+  .work-image-large {
+    display: flex;
+  }
+
+  .work-details h2 {
+    width: 100%;
+  }
+
+  .work-details .project-btn {
+    width: 30%;
+  }
+
+  .work-description {
+    width: 496px;
+  }
+
+  .contact-section {
+    flex-direction: row;
+    padding: 142px;
+    align-items: flex-start;
+    justify-content: space-around;
+  }
+
+  .contact-left {
+    width: 50%;
+    margin-top: -8%;
+  }
+
+  .experience {
+    width: 50%;
+  }
+
+  .contact-left .primary-margin-change {
+    width: 50%;
+    text-align: left;
+  }
+
+  .contact-left .resume-btn {
+    width: 35%;
+  }
+
+  .experience .outer-list span {
+    margin-right: 40%;
+  }
+
+  .experience .inner-list {
+    flex-direction: row;
+    align-content: center;
+    justify-content: space-evenly;
+
+  }
+
+  .experience .inner-list li {
+    margin-top: 36px;
+    width: 30%;
+    padding: 12px 12px 20px 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .experience .inner-list li span {
+    padding-top: 16px;
+    margin-left: -1%;
+  }
+
+  .contact-form {
+    margin-top: -10%;
+    background-image: url(images/bg-desktop2.svg);
+  }
+
+  .contact-form p {
+    width: 569px;
+  }
+
+  .contact-list-item input {
+    width: 447px;
+    border-radius: 0;
+    margin-bottom: 27px;
+  }
+
+  .contact-list-item textarea {
+    width: 447px;
+    border-radius: 0;
+  }
+
+  .contact-list .contact-list-item button:enabled {
+    width: 30%;
+    margin-left: 35%;
+    margin-top: 20px;
+    font-size: 17px;
+    font-weight: 500;
   }
 }
