Update style.css to remove linter errors

--- a/style.css
+++ b/style.css
@@ -446,8 +446,9 @@ nav {
     opacity: 0;
     transform: translate3d(0, 50px, 0);
   }
-  
-  50%, 100% {
+
+  50%,
+  100% {
     opacity: 1;
     transform: translate3d(0, 0, 0);
   }
